Fixes to Raspbian build

--- a/driver_Raspbian_SDL/jum52.cfg
+++ b/driver_Raspbian_SDL/jum52.cfg
@@ -13,13 +13,13 @@ voice=yes
 # audio volume (0 to 100)
 volume=75
 # fullscreen (yes/no) (no for windowed mode)
-fullscreen=no
+fullscreen=yes
 # use which controller (keyboard/joystick/mouse/mousepaddle)
 controller=keyboard
 # use a special control mode (normal/robotron/pengo)
 controlmode=normal
 # scale video output (1/2/3/4x)
-scale=1
+scale=2
 # load an alternative palette (.act file)
 #palette=real.act
 # slow-motion mode (30 fps) "marijuana mode"
